--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <style> body{background-color: rgb(185, 204, 214); border: 1px solid green;} </style>
 </head>
 <body>
-	<h1> <a target="_blank" href="sitio/">Sitio prueba</a> </h1>
+	<h1> <a target="_blank" href="sitio/">Sitio prueba - año 2023</a> </h1>
 		
-	<h1> Primera unidad </h1>
+	<h1> Primera unidad curso diseño web </h1>
 	<h3> 1. Introducción </h3>
 	<ul>
 		<li> <a target="_blank" href="https://www.apachefriends.org/download.html">Instalar y configurar XAMPP</a></li>
